@@ -1,3 +1,8 @@
+2002-08-19  Ross Burton  <ross@burtonini.com>
+ 
+	* yelp.desktop.in: 
+	- Fix the desktop file so that it validates correctly.
+	
 2002-08-16  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/yelp-html-gtkhtml1.c
